feat: adding a new screen

--- a/pages/page01/page01.html
+++ b/pages/page01/page01.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="page01.css">
     <link rel="stylesheet" href="../../layout/layout.css">
     <title>Document</title>
+    <script src="../../js/next.js"></script>
 </head>
 <body>
     <main>
@@ -26,8 +27,7 @@
                 <div class="content">
                     
                         <button class="button" onclick="history.back()">Back to Home</button>
-                        <button class="button"><a href="page01/page01.html">Fill out the form
-                        </a></button>
+                        <button class="button" onclick="proximo()">Fill out the form</button>
                     
                 </div>
         </article>
