feat: responsive screens

--- a/pages/page03/page03.html
+++ b/pages/page03/page03.html
@@ -44,8 +44,8 @@
                         <label for="bondmarket">online or face to face courses</label>
                     </p>
                     <p>
-   <label for="cryptocurrencymarket">experience with little investment</label>                        <input type="checkbox" name="checkbox" id="cryptocurrencymarket" value="cryptocurrencymarket" />
-                     
+                    <input type="checkbox" name="checkbox" id="experience" value="experience" />
+                    <label for="experience">experience with little investment</label>
                     </p>
 
                 </fieldset>
