--- a/pages/page05/page05.html
+++ b/pages/page05/page05.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page05.css">
     <link rel="stylesheet" href="../../layout/layout.css">
+    <script src="../../js/script.js" defer></script>
     <title>Survey Form</title>
 </head>
 
@@ -18,7 +19,7 @@
             </figure>
         </section>
         <article class="form-art">
-            <form action="">
+            <form action="" id="next">
                 <p>
 
                     <label for="fullname" class="label">Full name:</label>
@@ -35,7 +36,7 @@
                 </p>
                 <div class="content">
                     <button class="button" onclick="history.back()">Back</button>
-                    <button class="button">Submit</button>
+                    <button type="submit" class="button">Submit</button>
                 </div>
             </form>
         </article>
