--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/home.css">
+    <script src="../js/script.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -17,7 +18,7 @@
                 Thanks for participating in the poll
             </p>
             <p class="p_button">
-                <button class="button"><a href="page01/page01.html">Let's go</a></button>
+                <button class="button"onclick="page01()" >Let's go</button>
             </p>
         </article>
         <figure class="section-home">
