fix: screen navigation

--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../layout/layout.css">
     <script src="../js/script.js" defer></script>
     <title>Document</title>
 </head>
@@ -18,7 +19,7 @@
                 Thanks for participating in the poll
             </p>
             <p class="p_button">
-                <button class="button"onclick="page01()" >Let's go</button>
+                <button class="button"onclick="page1()" >Let's go</button>
             </p>
         </article>
         <figure class="section-home">
