--- a/pages/page01/page01.html
+++ b/pages/page01/page01.html
@@ -27,7 +27,7 @@
                 </p>
                 <div class="content">
                     
-                        <button class="button" onclick="history.back()">Back to Home</button>
+                        <button class="button" onclick="home()">Back to Home</button>
                         <button class="button" onclick="page02()">Fill out the form</button>
                     
                 </div>
