--- a/pages/page03/page03.html
+++ b/pages/page03/page03.html
@@ -20,7 +20,7 @@
         </section>
         <article>
             <h3 class="h3-form">How do you decide to invest?</h3>
-            <form id="next">
+            <form id="form">
                 <p>
 
                     <select name="haveaCount" id="createdAccount" class="select-form">
@@ -52,7 +52,7 @@
                 </fieldset>
                 <div class="content">
 
-                    <button class="button" onclick="history.back()">Back</button>
+                    <button class="button" onclick="page02()">Back</button>
                     <button class="button" onclick="page04()">Next</button>
                 </div>
                 <div class="skip-button">
