--- a/pages/page04/page04.html
+++ b/pages/page04/page04.html
@@ -17,12 +17,12 @@
             </figure>
         </section>
         <article>
-            <form action="" id="next" class="form-area">
+            <form action="" id="form" class="form-area">
                 <label for="Investment" class="text-label">If you or someone close to you has already made a loss on the investment, write down the details</label>
                 <textarea name="" id="" cols="30" rows="10" class="size-area"></textarea>
                 <div class="content">
 
-                    <button class="button" onclick="history.back()">Back</button>
+                    <button class="button" onclick="page03()">Back</button>
                     <button class="button" onclick="page05()">Next</button>
                 </div>
                 <div class="skip-button">
