--- a/pages/page05/page05.html
+++ b/pages/page05/page05.html
@@ -19,7 +19,7 @@
             </figure>
         </section>
         <article class="form-art">
-            <form action="" id="next">
+            <form  id="form">
                 <p>
 
                     <label for="fullname" class="label">Full name:</label>
