--- a/pages/page02/page02.html
+++ b/pages/page02/page02.html
@@ -58,10 +58,10 @@
                 
                 
                 <button class="button" onclick="page01()">Back</button>
-                <button type="submit" class="button button1" onmouseover="validation()" onclick="page03()">Next</button>
+                <button type="submit" class="button1" onmouseover="validation()" onclick="page03()">Next</button>
             </div>
                 <div class="skip-button">
-                    <button  class="button" id="skip" >Skip</button>
+                    <button  class="button" id="skip" ><a href="../page03/page03.html">Skip</a></button>
                 </div>
             </form>
     </article>
